syntax = "proto3";

package proto;

import "model.proto";

service Say {
    rpc SaySomeThing(HelloRequest) returns (HelloResponse) {}
}

