syntax = "proto3";

package proto;

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string RespDesc = 1;
}
